--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,70 +1,47 @@
+name: CI/CD
+
 on:
-
-push:
-
-branches: [ main]
-
-workflow dispatch:
+  push:
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-build:
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
 
-runs-on: ubuntu-latest
+      - name: Install dependencies
+        run: npm install
 
-steps:
+      - name: Build application
+        run: echo "Building the application..."
 
-- name: Checkout code
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm install
 
-- name: Set up Node.js
+      - name: Run tests
+        run: npm test
 
-uses: actions/setup-node@v4
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-with:
-
-node-version: '18'
-
-- name: Install dependencies
-
-run: npm install
-
-- name: Build application
-
-run: echo "Building the application..."
-
-test:
-
-runs-on: ubuntu-latest
-
-needs: build
-
-steps:
-
-- name: Checkout code
-
-uses: actions/checkout@v4
-
-- name: Install dependencies
-
-run: npm install
-- name: Run tests
-
-run: npm test
-
-deploy:
-
-runs-on: ubuntu-latest
-
-needs: test
-
-steps:
-
-- name: Checkout code
-
-uses: actions/checkout@v4
-
-- name: Deploy the application
-
-run: echo "Deploying the application..."
+      - name: Deploy the application
+        run: echo "Deploying the application..."
